--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "dotenv": "^8.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-login-modal-sm": "^1.0.8",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   },
