--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "react-login-modal-sm": "^1.0.8",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2"
   }
 }
