--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-login-modal-sm": "^1.0.8",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "unirest": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
