--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,12 @@
     "axios": "^0.18.1",
     "dotenv": "^8.2.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
     "react-login-modal-sm": "^1.0.8",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
-    "unirest": "^0.6.0"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
