--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "knowledge-able-app",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "12.10.0"
+  },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
@@ -30,6 +33,5 @@
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.1.2",
     "unirest": "^0.6.0"
-
   }
 }
