--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,14 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
+    "express-session": "^1.17.0",
+    "formik": "^2.1.4",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
@@ -16,7 +23,8 @@
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
