--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
     "node": "12.10.0"
   },
   "main": "server.js",
-  "engines": {
-    "node": "12.10.0"
-  },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
@@ -27,13 +24,21 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.16.3",
+    "express-session": "^1.17.0",
+    "formik": "^2.1.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-login-modal-sm": "^1.0.8",
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-modal": "^4.0.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "yup": "^0.28.1"
   }
 }
