adding almost working authentication, updated NavBar and Journey Page

--- a/package.json
+++ b/package.json
@@ -24,10 +24,18 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.3.16",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-login-modal-sm": "^1.0.8",
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-modal": "^4.0.1",
