--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,15 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
